# gentle-grasping

./: .gitignore  pyproject.toml
configs/: data_collection.yaml  train.yaml
configs/lr_scheduler/: exponential.yaml
configs/model/: action_conditional.yaml  sound_only.yaml  static_sound_aware.yaml
configs/optimizer/: adam.yaml
configs/split/: cv.yaml  random.yaml
configs/transforms/: default.yaml
notebooks/: 1-EDA.ipynb
src/gentle_grasp/: data_module.py  model_module.py  sound_processing.py  split_strategy.py  train.py
src/gentle_grasp/dataset/: action_conditional.py  sound_processor.py  static_sound_aware.py
src/gentle_grasp/model/: static_sound_aware.py
src/robotenv/: data_collection.py  observation_check.py  operation_check.py  optimal_control.py  without_data_collection.py
src/robotenv/sensors/: audio.py  digit.py
