[project]
name = "gentle-grasp"
version = "0.1.0"
description = ""
authors = [
    {name = "Yahor Paromau",email = "yahor.paromau@gmail.com"}
]
requires-python = ">=3.11, <3.12.3"
dependencies = [
]

[tool.poetry]
packages = [{ include = "gentle_grasp", from = "src"}]



[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
