[project]
name = "gentle-grasp"
version = "0.1.0"
description = ""
authors = [
    {name = "Yahor Paromau",email = "yahor.paromau@gmail.com"}
]
requires-python = ">=3.11, <3.12.3"
dependencies = [
    "torch (>=2.7.0,<3.0.0)",
    "torchvision (>=0.22.0,<0.23.0)",
    "matplotlib (>=3.10.3,<4.0.0)",
    "numpy (>=2.2.6,<3.0.0)",
    "sounddevice (>=0.5.2,<0.6.0)",
    "soundfile (>=0.13.1,<0.14.0)",
    "ipykernel (>=6.29.5,<7.0.0)",
    "pytorch-lightning (>=2.5.1.post0,<3.0.0)",
    "mlflow (>=2.22.0,<3.0.0)",
    "torchmetrics (>=1.7.1,<2.0.0)"
]

[tool.poetry]
packages = [{ include = "gentle_grasp", from = "src"}]



[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
